[gd_scene load_steps=9 format=3 uid="uid://djneumxpp42np"]

[ext_resource type="Theme" uid="uid://bxdc46numn0ub" path="res://assets/theme_1/themes/main_menu/main_menu.tres" id="1_c3dxh"]
[ext_resource type="Script" path="res://game_screen/game_screen.gd" id="2_jejp2"]
[ext_resource type="Script" path="res://global_systems/scene_manager_system/scene_container/scene_container.gd" id="3_ds0wg"]
[ext_resource type="PackedScene" uid="uid://7q0an868lxwl" path="res://game_screen/hud/hud.tscn" id="4_wbsfc"]
[ext_resource type="PackedScene" uid="uid://bb7sqgogid3xx" path="res://game_screen/last_tries_container/last_tries_container.tscn" id="5_dbydb"]
[ext_resource type="Texture2D" uid="uid://drqhgyawu7alq" path="res://assets/theme_1/images/game_screen/last_tries_container/newmdpi.png" id="6_hg7db"]
[ext_resource type="Texture2D" uid="uid://byv370bjrommu" path="res://assets/theme_1/images/game_screen/last_tries_container/wrongmdpi.png" id="7_dnsii"]
[ext_resource type="Texture2D" uid="uid://cgxenmn18rf7e" path="res://assets/theme_1/images/game_screen/last_tries_container/correctmdpi.png" id="8_sxcgf"]

[node name="GameScreen" type="Control"]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
theme = ExtResource("1_c3dxh")
script = ExtResource("2_jejp2")

[node name="QuestionContainer" type="Node2D" parent="."]
script = ExtResource("3_ds0wg")

[node name="AnswerContainer" type="Node2D" parent="."]
script = ExtResource("3_ds0wg")

[node name="HUD" parent="." instance=ExtResource("4_wbsfc")]
layout_mode = 1
mouse_filter = 2

[node name="LastTriesContainer" parent="HUD" instance=ExtResource("5_dbydb")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 427.0
offset_top = 47.0
offset_right = 427.0
offset_bottom = 47.0
tries_to_display = 20
new_try = ExtResource("6_hg7db")
wrong_try = ExtResource("7_dnsii")
correct_try = ExtResource("8_sxcgf")

[node name="GoBackToMenuButton" type="Button" parent="."]
layout_mode = 0
offset_left = 100.0
offset_top = 72.0
offset_right = 340.0
offset_bottom = 177.0
theme_override_font_sizes/font_size = 55
text = "GoBack"

[connection signal="pressed" from="GoBackToMenuButton" to="." method="_on_go_back_to_menu_button_pressed"]
